--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "nuxt": "^3.16.2",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
